rename : 로고 이미지 파일명 수정하다

--- a/src/header.html
+++ b/src/header.html
@@ -229,7 +229,7 @@
     <h1 class="gnb-title">
       <span class="blind">신도관리프로그램 수비라</span>
       <a href="../index.html">
-        <img src="../img/logo-min.png" alt="신도관리프로그램 수비라" />
+        <img src="../img/logo.png" alt="신도관리프로그램 수비라" />
       </a>
     </h1>
 
