fix : 이미지 위치 수정하다

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </div>
 
         <!-- 이미지 -->
-        <img src="./img/main-top.png" alt="" class="main-top" />
-        <img src="./img/main-top-mo.png" alt="" class="main-top-mo" />
+        <img src="./img/index/main-top.png" alt="" class="main-top" />
+        <img src="./img/index/main-top-mo.png" alt="" class="main-top-mo" />
 
         <!-- 상담 문의 안내 -->
         <div class="tel-area">
@@ -239,6 +239,14 @@
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
         </div>
+      </section>
+
+      <!-- 사찰 홈페이지 제작 -->
+      <section class="portfolio-area">
+        <h2 class="title">사찰 홈페이지 제작</h2>
+        <p class="sub-title">
+          사찰을 잘아는 수비라가 만드는 사찰 홈페이지는 다릅니다.
+        </p>
       </section>
     </main>
 
