style  이미지 파일 추가하다

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header"></header>
 
     <main>
-      <!-- 최상단 이미지 -->
+      <!-- 1. 최상단 이미지 -->
       <section class="top-img-area">
         <!-- title -->
         <div class="title-area">
@@ -50,7 +50,7 @@
         </div>
       </section>
 
-      <!-- 사찰 행정의 새로운 기준 -->
+      <!-- 2. 사찰 행정의 새로운 기준 -->
       <section class="standard-area">
         <h2 class="title">사찰 행정의 새로운 기준</h2>
         <p class="sub-title">
@@ -100,7 +100,7 @@
         </ul>
       </section>
 
-      <!-- 수비라 출력물 안내 -->
+      <!-- 3. 수비라 출력물 안내 -->
       <section class="print-area">
         <h2 class="title">수비라 출력물 안내</h2>
         <p class="sub-title">
@@ -241,7 +241,7 @@
         </div>
       </section>
 
-      <!-- 사찰 홈페이지 제작 -->
+      <!-- 4. 사찰 홈페이지 제작 -->
       <section class="portfolio-area">
         <h2 class="title">사찰 홈페이지 제작</h2>
         <p class="sub-title">
