feat : 사찰 홈페이지 제작 영역 추가하다

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/index-section1.css" />
     <link rel="stylesheet" href="./css/index-section2.css" />
     <link rel="stylesheet" href="./css/index-section3.css" />
+    <link rel="stylesheet" href="./css/index-section4.css" />
   </head>
   <body>
     <header id="header"></header>
@@ -247,6 +248,43 @@
         <p class="sub-title">
           사찰을 잘아는 수비라가 만드는 사찰 홈페이지는 다릅니다.
         </p>
+
+        <ul>
+          <li>
+            <img src="./img/index/portfolio-item1.png" alt="템플스테이 웹진" />
+            <p>템플스테이 웹진</p>
+          </li>
+          <li>
+            <img
+              src="./img/index/portfolio-item2.png"
+              alt="의왕 청계사 홈페이지"
+            />
+            <p>의왕 청계사 홈페이지</p>
+          </li>
+          <li>
+            <img src="./img/index/portfolio-item3.png" alt="모바일 신도증" />
+            <p>모바일 신도증</p>
+          </li>
+          <li>
+            <img src="./img/index/portfolio-item1.png" alt="템플스테이 웹진" />
+            <p>템플스테이 웹진</p>
+          </li>
+          <li>
+            <img
+              src="./img/index/portfolio-item2.png"
+              alt="의왕 청계사 홈페이지"
+            />
+            <p>의왕 청계사 홈페이지</p>
+          </li>
+          <li>
+            <img src="./img/index/portfolio-item3.png" alt="모바일 신도증" />
+            <p>모바일 신도증</p>
+          </li>
+        </ul>
+
+        <div class="portfolio-btn-area">
+          <a class="portfolio-btn"> 더보기 </a>
+        </div>
       </section>
     </main>
 
