fix 이미지 파일 경로 수정하다

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="tel-area">
           <div class="text-area">
             <span>상담 문의 안내</span>
-            <img src="./img/icon-tel-min.png" alt="전화문의안내" />
+            <img src="./img/icon-tel.png" alt="전화문의안내" />
           </div>
           <div class="tel"><a href="tel:0267485212">02-6748-5212</a></div>
         </div>
