--- a/src/header.html
+++ b/src/header.html
@@ -228,8 +228,8 @@
     <!-- title -->
     <h1 class="gnb-title">
       <span class="blind">신도관리프로그램 수비라</span>
-      <a href="../index.html">
-        <img src="../img/logo.png" alt="신도관리프로그램 수비라" />
+      <a href="./index.html">
+        <img src="./img/logo.png" alt="신도관리프로그램 수비라" />
       </a>
     </h1>
 
@@ -279,7 +279,7 @@
 
       <!-- mo 메뉴-->
       <button class="gnb-menu-mo">
-        <img src="../img/menu.png" alt="" />
+        <img src="./img/menu.png" alt="전체메뉴 보기 버튼" />
       </button>
     </nav>
 
@@ -288,14 +288,14 @@
       <div class="modal-header">
         <h3>전체메뉴</h3>
         <button>
-          <img src="../img/icon-close.png" alt="닫기" />
+          <img src="./img/icon-close.png" alt="닫기" />
         </button>
       </div>
 
       <div class="modal-body">
         <ul class="modal-gnb-menu">
           <li class="modal-gnb-menu-item">
-            <a href="../index.html">홈</a>
+            <a href="./index.html">홈</a>
           </li>
           <li class="modal-gnb-menu-item">
             <a href="#">신도관리프로그램 수비라</a>
@@ -340,10 +340,10 @@
 
         <div class="counsel-area">
           <a href="#">
-            <img src="../img/icon-mail.png" alt="상담신청하기 아이콘" />
+            <img src="./img/icon-mail.png" alt="상담신청하기 아이콘" />
             <p>상담 신청하기</p>
             <img
-              src="../img/icon-right-arrow-brown-24x24.png"
+              src="./img/icon-right-arrow-brown-24x24.png"
               alt="상담신청하기 바로가기"
             />
           </a>
