fix : 모달 여백수정하다

--- a/src/header.html
+++ b/src/header.html
@@ -144,6 +144,10 @@
       height: 24px;
     }
 
+    .gnb-modal.on .modal-body {
+      padding-bottom: 70px;
+    }
+
     /* modal-gnb-menu */
     .gnb-modal.on .modal-gnb-menu {
       padding: 0 20px;
