fix : index 출력물 클릭시 자세히보기 추가하다

--- a/index.html
+++ b/index.html
@@ -113,126 +113,151 @@
           <div class="swiper-wrapper">
             <!-- 연등 꼬리표 노란색 -->
             <div class="swiper-slide" style="background-color: #fffadd">
-              <img
-                src="./img/print/print-cate1-item1.png"
-                alt="연등 꼬리표 노란색"
-              />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">
-                  연등 꼬리표 노란색<br />(양면)
-                </p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img
+                  src="./img/print/print-cate1-item1.png"
+                  alt="연등 꼬리표 노란색"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">
+                    연등 꼬리표 노란색<br />(양면)
+                  </p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 연등 꼬리표 분홍색 -->
             <div class="swiper-slide" style="background-color: #fff2f7">
-              <img
-                src="./img/print/print-cate1-item2.png"
-                alt="연등 꼬리표 분홍색"
-              />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">
-                  연등 꼬리표 분홍색<br />(양면)
-                </p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img
+                  src="./img/print/print-cate1-item2.png"
+                  alt="연등 꼬리표 분홍색"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">
+                    연등 꼬리표 분홍색<br />(양면)
+                  </p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 연등 꼬리표 흑백 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
-              <img
-                src="./img/print/print-cate1-item3.png"
-                alt="연등 꼬리표 흑백"
-              />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">
-                  연등 꼬리표 흑백<br />(양면)
-                </p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img
+                  src="./img/print/print-cate1-item3.png"
+                  alt="연등 꼬리표 흑백"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">
+                    연등 꼬리표 흑백<br />(양면)
+                  </p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 위패 극락왕생 컬러 -->
             <div class="swiper-slide" style="background-color: #cdebd9">
-              <img
-                src="./img/print/print-cate2-item1.png"
-                alt="위패 극락왕생 컬러"
-              />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">
-                  위패 극락왕생 컬러<br />(양면)
-                </p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img
+                  src="./img/print/print-cate2-item1.png"
+                  alt="위패 극락왕생 컬러"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">
+                    위패 극락왕생 컬러<br />(양면)
+                  </p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 위패 극락왕생 흑백 -->
             <div class="swiper-slide" style="background-color: #cdebd9">
-              <img
-                src="./img/print/print-cate2-item2.png"
-                alt="위패 극락왕생 흑백"
-              />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">위패 극락왕생 흑백</p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img
+                  src="./img/print/print-cate2-item2.png"
+                  alt="위패 극락왕생 흑백"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">위패 극락왕생 흑백</p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 기부금 영수증 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
-              <img
-                src="./img/print/print-cate3-item1.png"
-                alt="기부금 영수증"
-              />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">기부금 영수증</p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img
+                  src="./img/print/print-cate3-item1.png"
+                  alt="기부금 영수증"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">기부금 영수증</p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 축원문 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
-              <img src="./img/print/print-cate3-item2.png" alt="축원문" />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">축원문</p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img src="./img/print/print-cate3-item2.png" alt="축원문" />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">축원문</p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 천혼문 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
-              <img src="./img/print/print-cate3-item3.png" alt="천혼문" />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">천혼문</p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img src="./img/print/print-cate3-item3.png" alt="천혼문" />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">천혼문</p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 축원+천혼 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
-              <img src="./img/print/print-cate3-item4.png" alt="축원+천혼" />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">축원+천혼</p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img src="./img/print/print-cate3-item4.png" alt="축원+천혼" />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">축원+천혼</p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 영가 천혼문 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
-              <img src="./img/print/print-cate3-item5.png" alt="영가 천혼문" />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">영가 천혼문</p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img
+                  src="./img/print/print-cate3-item5.png"
+                  alt="영가 천혼문"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">영가 천혼문</p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
 
             <!-- 제사 위패 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
-              <img src="./img/print/print-cate3-item6.png" alt="제사 위패" />
-              <div class="print-cate-text">
-                <p class="print-cate-text-title">제사 위패</p>
-                <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+              <div>
+                <img src="./img/print/print-cate3-item6.png" alt="제사 위패" />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">제사 위패</p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
               </div>
             </div>
           </div>
