fix :  header 모달의 화살표 이미지 경로 수정하다

--- a/src/header.html
+++ b/src/header.html
@@ -167,7 +167,7 @@
       content: "";
       width: 12px;
       height: 12px;
-      background: url(../img/icon-right-arrow-12x12.png) center/12px no-repeat;
+      background: url(./img/icon-right-arrow-12x12.png) center/12px no-repeat;
     }
     .gnb-modal.on .modal-gnb-sub-menu {
       padding: 16px;
