feat : index section2 수정하다

--- a/index.html
+++ b/index.html
@@ -61,42 +61,93 @@
         <ul>
           <li>
             <a href="https://blog.naver.com/ioiw/223649129536">
+              <span>수비라 기능 미리보기</span>
               <!-- pc -->
               <img
-                src="./img/index/section-item1.png"
+                src="./img/index/standard-item1.png"
                 alt="수비라 기능 미리보기"
                 class="pc-img" />
               <!-- mo -->
               <img
-                src="./img/index/section-item1-mo.png"
+                src="./img/index/standard-item1-mo.png"
                 alt="수비라 기능 미리보기"
                 class="mo-img"
             /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/224012528091"
-              >포교와 성장을 위한 청사진</a
-            >
+            <a href="https://blog.naver.com/ioiw/224012528091">
+              <span>포교와 성장을 위한 청사진</span>
+              <!-- pc -->
+              <img
+                src="./img/index/standard-item2.png"
+                alt="포교와 성장을 위한 청사진"
+                class="pc-img" />
+              <!-- mo -->
+              <img
+                src="./img/index/standard-item2-mo.png"
+                alt="포교와 성장을 위한 청사진"
+                class="mo-img"
+            /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/224005254231"
-              >종무소의 사고와 행동 유형</a
-            >
+            <a href="https://blog.naver.com/ioiw/224005254231">
+              <span>종무소의 사고와 행동 유형</span>
+              <!-- pc -->
+              <img
+                src="./img/index/standard-item3.png"
+                alt="종무소의 사고와 행동 유형"
+                class="pc-img" />
+              <!-- mo -->
+              <img
+                src="./img/index/standard-item3-mo.png"
+                alt="종무소의 사고와 행동 유형"
+                class="mo-img"
+            /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/223959457793"
-              >사찰을 위한 선택과 결정</a
-            >
+            <a href="https://blog.naver.com/ioiw/223959457793">
+              <span>사찰을 위한 선택과 결정</span>
+              <!-- pc -->
+              <img
+                src="./img/index/standard-item4.png"
+                alt="사찰을 위한 선택과 결정"
+                class="pc-img" />
+              <!-- mo -->
+              <img
+                src="./img/index/standard-item4-mo.png"
+                alt="사찰을 위한 선택과 결정"
+                class="mo-img"
+            /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/223959457793"
-              >신도관리의 시대 전환</a
-            >
+            <a href="https://blog.naver.com/ioiw/223959457793">
+              <span>신도관리의 시대 전환</span>
+              <!-- pc -->
+              <img
+                src="./img/index/standard-item5.png"
+                alt="신도관리의 시대 전환"
+                class="pc-img" />
+              <!-- mo -->
+              <img
+                src="./img/index/standard-item5-mo.png"
+                alt="신도관리의 시대 전환"
+                class="mo-img"
+            /></a>
           </li>
           <li>
-            <a href="https://blog.naver.com/ioiw/223959457793"
-              >종무원의 상황대응 리더십</a
-            >
+            <a href="https://blog.naver.com/ioiw/223959457793">
+              <span>종무원의 상황대응 리더십</span>
+              <!-- pc -->
+              <img
+                src="./img/index/standard-item6.png"
+                alt="종무원의 상황대응 리더십"
+                class="pc-img" />
+              <!-- mo -->
+              <img
+                src="./img/index/standard-item6-mo.png"
+                alt="종무원의 상황대응 리더십"
+                class="mo-img"
+            /></a>
           </li>
         </ul>
       </section>
