feat : footer pc 작업시작하다

--- a/index.html
+++ b/index.html
@@ -364,11 +364,12 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer id="footer"></footer>
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/print-swiper.js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/footer.js"></script>
   </body>
 </html>
