feat 상담신청하기 추가하다

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/index-section2.css" />
     <link rel="stylesheet" href="./css/index-section3.css" />
     <link rel="stylesheet" href="./css/index-section4.css" />
+    <link rel="stylesheet" href="./css/index-section5.css" />
   </head>
   <body>
     <header id="header"></header>
@@ -360,6 +361,23 @@
 
         <div class="portfolio-btn-area">
           <a class="portfolio-btn"> 더보기 </a>
+        </div>
+      </section>
+
+      <!-- 5. 문의 및 상담 -->
+      <section class="contact-area">
+        <h2 class="title blind">문의 및 상담</h2>
+
+        <div class="counsel-area">
+          <a href="#">
+            <img src="./img/icon-mail.png" alt="상담신청하기 아이콘" />
+            <p>상담 신청하기</p>
+            <img
+              src="./img/icon-right-arrow-brown-24x24.png"
+              alt="상담신청하기 바로가기"
+            />
+          </a>
+          <p>연락처를 남겨주시면 확인 후 빠르게 연락드리겠습니다:)</p>
         </div>
       </section>
     </main>
