feat 브랜드 스토리 페이지 추가하다

--- a/src/header.html
+++ b/src/header.html
@@ -244,7 +244,7 @@
           <a href="#">신도관리프로그램 수비라</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
-              <li><a href="#">브랜드 스토리</a></li>
+              <li><a href="./brand-story.html">브랜드 스토리</a></li>
               <li><a href="#">주요 기능</a></li>
               <li><a href="#">도입 효과</a></li>
               <li><a href="#">바로 비교하기</a></li>
@@ -305,7 +305,7 @@
             <a href="#">신도관리프로그램 수비라</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
-                <li><a href="#">브랜드 스토리</a></li>
+                <li><a href="./brand-story.html">브랜드 스토리</a></li>
                 <li><a href="#">주요 기능</a></li>
                 <li><a href="#">도입 효과</a></li>
                 <li><a href="#">바로 비교하기</a></li>
