feat : 브랜드 스토리 pc 페이지 추가하다

--- a/brand-story.html
+++ b/brand-story.html
@@ -5,13 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>브랜드 스토리 - 수비라</title>
     <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/brand-story/index.css" />
+    <link rel="stylesheet" href="./css/brand-story/brand-story.css" />
   </head>
   <body>
     <header id="header"></header>
 
     <main>
-      <section>브랜드 스토리</section>
+      <h2 class="title">
+        브랜드 스토리
+        <span class="breadcrumb">신도관리 프로그램 수비라 > 브랜드 스토리</span>
+      </h2>
+
+      <section class="story-intro-section">
+        <div class="story-intro-content">
+          <p>
+            수비라는 앞장서서(首), 쉽고 빠르게(飛), 하나로 연결한다(羅)는 의미를
+            담고 있습니다. <br />
+            즉,
+            <b
+              >"사찰 행정의 새로운 시작을 열어, 자유롭게 날아오르며, 모두를
+              하나로 연결하는 길."</b
+            ><br />
+            이것이 바로 수비라가 약속하는 '브랜드 가치'입니다.
+          </p>
+        </div>
+      </section>
+
+      <section class="story-section">
+        <div class="korean-character">
+          <div class="char-box">首</div>
+          <div class="char-title">수</div>
+          <div class="meaning">처음, 앞장서다</div>
+        </div>
+        <div class="story-content">
+          <h3>
+            수비라는 사내 행정의 새로운 시작을 할 때, 항상 맨 앞에서 이끌어주는
+            힘입니다.
+          </h3>
+          <dl>
+            <dt>뜻</dt>
+            <dd>머리, 으뜸, 시작</dd>
+            <dt>스토리</dt>
+            <dd>사내 행정의 책임임을 짊어지고 이끄는 존재</dd>
+            <dt>방향</dt>
+            <dd>총무행정의 중심이자 방향을 잡아주는 리디의 상징</dd>
+          </dl>
+        </div>
+      </section>
+
+      <section class="story-section">
+        <div class="korean-character">
+          <div class="char-box">飛</div>
+          <div class="char-title">비</div>
+          <div class="meaning">날다, 앞으로 나아가다</div>
+        </div>
+        <div class="story-content">
+          <h3>
+            수비라는 사내 업무를 자유롭게 연결에 스텝과 종무원이 수행과 신도
+            돌봄에 집중하도록 돕습니다.
+          </h3>
+          <dl>
+            <dt>뜻</dt>
+            <dd>날아오르다, 자유, 속도</dd>
+            <dt>스토리</dt>
+            <dd>답답한 종이 업무와 설치형 프로그램의 한계를 넘어</dd>
+            <dt>방향</dt>
+            <dd>클라우드로 쉽게, 빠르게 날아오르는 전환을 의미</dd>
+          </dl>
+        </div>
+      </section>
+
+      <section class="story-section">
+        <div class="korean-character">
+          <div class="char-box">羅</div>
+          <div class="char-title">라</div>
+          <div class="meaning">그물, 펼쳐놓다</div>
+        </div>
+        <div class="story-content">
+          <h3>
+            수비라는 사내의 모든 일을 하나로 모아 유기적이고 조화로운 운영을
+            실현합니다.
+          </h3>
+          <dl>
+            <dt>뜻</dt>
+            <dd>그물, 조직, 펼쳐놓다</dd>
+            <dt>스토리</dt>
+            <dd>신도, 영가, 기도 접수, 재정 관리 등</dd>
+            <dt>방향</dt>
+            <dd>사내 행정의 모든 요소를 하나로 그물망처럼 촘촘하게 연결</dd>
+          </dl>
+        </div>
+      </section>
     </main>
 
     <footer id="footer"></footer>
