feat 브랜드 스토리 mo 상단영역 추가하다

--- a/brand-story.html
+++ b/brand-story.html
@@ -49,14 +49,15 @@
       <section class="story-intro-section">
         <div class="story-intro-content">
           <p>
-            수비라는 앞장서서(首), 쉽고 빠르게(飛), 하나로 연결한다(羅)는 의미를
-            담고 있습니다. <br />
+            수비라는 앞장서서(首), 쉽고 빠르게(飛), <br class="mo-only" />
+            하나로 연결한다(羅)는 의미를 담고 있습니다. <br />
             즉,
             <b
-              >"사찰 행정의 새로운 시작을 열어, 자유롭게 날아오르며, 모두를
-              하나로 연결하는 길."</b
+              >"사찰 행정의 새로운 시작을 열어, 자유롭게
+              <br class="mo-only" />날아오르며, 모두를 하나로 연결하는 길."</b
             ><br />
-            이것이 바로 수비라가 약속하는 '브랜드 가치'입니다.
+            이것이 바로 수비라가 약속하는 <br class="mo-only" />'브랜드
+            가치'입니다.
           </p>
         </div>
       </section>
