feat 브랜드 스토리 mo 완료하다

--- a/brand-story.html
+++ b/brand-story.html
@@ -66,12 +66,16 @@
         <div class="korean-character">
           <div class="char-box">首</div>
           <div class="char-title">수</div>
-          <div class="meaning">처음, 앞장서다</div>
+          <div class="meaning">
+            처음,<br class="mo-only" />
+            앞장서다
+          </div>
         </div>
         <div class="story-content">
           <h3>
-            수비라는 사내 행정의 새로운 시작을 할 때, 항상 맨 앞에서 이끌어주는
-            힘입니다.
+            수비라는 사내 행정의 새로운 시작을 할 때,<b
+              >항상 맨 앞에서 이끌어주는 힘</b
+            >입니다.
           </h3>
           <dl>
             <dt>뜻</dt>
@@ -88,18 +92,22 @@
         <div class="korean-character">
           <div class="char-box">飛</div>
           <div class="char-title">비</div>
-          <div class="meaning">날다, 앞으로 나아가다</div>
+          <div class="meaning">
+            날다,<br class="mo-only" />
+            앞으로<br class="mo-only" />
+            나아가다
+          </div>
         </div>
         <div class="story-content">
           <h3>
-            수비라는 사내 업무를 자유롭게 연결에 스텝과 종무원이 수행과 신도
-            돌봄에 집중하도록 돕습니다.
+            수비라는 <b>사찰 업무를 자유롭게 연결</b>해 스님과 종무원이 수행과
+            신도 돌봄에 집중하도록 돕습니다.
           </h3>
           <dl>
             <dt>뜻</dt>
             <dd>날아오르다, 자유, 속도</dd>
             <dt>스토리</dt>
-            <dd>답답한 종이 업무와 설치형 프로그램의 한계를 넘어</dd>
+            <dd>답답한 종이 업무와 설치형 프로그램의 한계를 넘어가다</dd>
             <dt>방향</dt>
             <dd>클라우드로 쉽게, 빠르게 날아오르는 전환을 의미</dd>
           </dl>
@@ -110,12 +118,12 @@
         <div class="korean-character">
           <div class="char-box">羅</div>
           <div class="char-title">라</div>
-          <div class="meaning">그물, 펼쳐놓다</div>
+          <div class="meaning">그물, <br class="mo-only" />펼쳐놓다</div>
         </div>
         <div class="story-content">
           <h3>
-            수비라는 사내의 모든 일을 하나로 모아 유기적이고 조화로운 운영을
-            실현합니다.
+            수비라는 사내의 모든 일을 하나로 모아
+            <b>유기적이고 조화로운 운영을 실현</b>합니다.
           </h3>
           <dl>
             <dt>뜻</dt>
