--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     />
     <link rel="stylesheet" href="./css/font.css" />
     <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/index-section1.css" />
-    <link rel="stylesheet" href="./css/index-section2.css" />
-    <link rel="stylesheet" href="./css/index-section3.css" />
-    <link rel="stylesheet" href="./css/index-section4.css" />
-    <link rel="stylesheet" href="./css/index-section5.css" />
+    <link rel="stylesheet" href="./css/index/index.css" />
+    <link rel="stylesheet" href="./css/index/index-section1.css" />
+    <link rel="stylesheet" href="./css/index/index-section2.css" />
+    <link rel="stylesheet" href="./css/index/index-section3.css" />
+    <link rel="stylesheet" href="./css/index/index-section4.css" />
+    <link rel="stylesheet" href="./css/index/index-section5.css" />
   </head>
   <body>
     <header id="header"></header>
